# sql_cot

./: .gitignore  README.md  data.json  dummy_tables.py  eval.py  evaluation.py  exec_eval.py  gen_ai.py  langchain_replace.py  metric.py  parse.py  poc.py  process_sql.py  pydantic_models.py  pyproject.toml  questions.py  results.csv  results.ipynb  retry.py  templates.py  test_eval.py  test_questions.py  together_poc.py  utils.py
results/: gold_gpt-3.5-turbo-0125_0.0.sql  results_gpt-3.5-turbo-0125_0.0.csv  results_gpt-3.5-turbo-0125_0.0.sql  results_meta-llama_Llama-3-70b-chat-hf_0.0.csv  results_mistralai_Mixtral-8x7B-Instruct-v0.1_0.0.csv  results_togethercomputer_CodeLlama-34b-Instruct_0.0.csv
