[tool.poetry]
name = "sql-cot"
version = "0.1.0"
description = ""
authors = ["Fabio Gomez <fabiogomez11c@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dspy-ai = "^2.4.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
