[tool.poetry]
name = "sql-cot"
version = "0.1.0"
description = ""
authors = ["Fabio Gomez <fabiogomez11c@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"
sqlparse = "^0.5.1"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
debugpy = "^1.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
